<resources>
    <string name="app_name">Time Tracker</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_drawer_layout">DrawerLayoutActivity</string>

    <string name="EMail">E-Mail</string>
    <string name="loginButto">Login</string>
    <string name="registerButton">Register</string>


    <string name="firstName">Firstname: </string>
    <string name="surName">Surname: </string>
    <string name="nickName">Nickname: </string>
    <string name="email">Email: </string>
    <string name="password">Password: </string>
    <string name="passwordConfirm">Password confirm: </string>
    <string name="back">Back</string>
    <string name="register">Register</string>
    <string name="newPassword">New password: </string>
    <string name="apply">Apply</string>
    <string name="quickStart">Quickstart</string>
    <string name="add">Add</string>
    <string name="change">Add</string>
    <string name="addCategory">Add Category</string>
    <string name="categoryName">Name of Category</string>
    <string name="delete">Delete</string>
    <string name="addTeamMember">Add team member</string>
    <string name="estimatedTime">Est. Time</string>
    <string name="cancel">Cancel</string>

    <string name="rolePrompt">Choose a role</string>
    <string name="chartPrompt">Choose a Project</string>
    <string name="userPrompt">Choose a User</string>
    <string name="categoryPrompt">Choose a Category</string>
    <string-array name="rolesArray">
        <item>Project Manager</item>
        <item>Project Co-worker</item>
    </string-array>

    <string-array name="projects">
        <item>SE Project</item>
        <item>Smart Home</item>
    </string-array>

    <string name="projectReport">Project Report</string>
    <string name="project">Project</string>
    <string name="exportExcel">Export as Excel</string>
    <string name="exportPdf">Export as Pdf</string>
    <string name="download">Download</string>
    <string name="category">Category</string>
 <!--   <string name="estimatedTime">Est. Time</string> -->
    <string name="time">Time</string>
    <string name="difference">Difference</string>
    <string name="userReport">User Report</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="dateFormat">dd.MM.yyyy</string>
    <string name="date">Date</string>
    <string name="duration">Duration</string>

    <string-array name="members_role">
        +
        <item>Member</item>
        +
        <item>Admin</item>
        +
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
