<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="at.jku.se.timetrackerfrontend.SettingsActivity">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/eText_settings_firstname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="24dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:labelFor="@id/eText_settings_firstname"
                    android:text="@string/firstName"
                    app:layout_constraintBottom_toBottomOf="@+id/eText_settings_firstname"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/eText_settings_firstname" />

                <EditText
                    android:id="@+id/eText_settings_surname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="24dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/eText_settings_firstname" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:labelFor="@id/eText_settings_surname"
                    android:text="@string/surName"
                    app:layout_constraintBottom_toBottomOf="@+id/eText_settings_surname"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/eText_settings_surname" />

                <EditText
                    android:id="@+id/eText_settings_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="24dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/eText_settings_surname" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:labelFor="@id/eText_settings_nickname"
                    android:text="@string/nickName"
                    app:layout_constraintBottom_toBottomOf="@+id/eText_settings_nickname"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/eText_settings_nickname" />

                <EditText
                    android:id="@+id/eText_settings_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="24dp"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/eText_settings_nickname" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:labelFor="@id/eText_settings_email"
                    android:text="@string/email"
                    app:layout_constraintBottom_toBottomOf="@+id/eText_settings_email"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/eText_settings_email" />

                <EditText
                    android:id="@+id/eText_settings_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="24dp"
                    android:ems="10"
                    android:inputType="textPassword"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/eText_settings_email" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:labelFor="@id/eText_settings_password"
                    android:text="@string/newPassword"
                    app:layout_constraintBottom_toBottomOf="@+id/eText_settings_password"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/eText_settings_password" />

                <EditText
                    android:id="@+id/eText_settings_passwordconfirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="24dp"
                    android:ems="10"
                    android:inputType="textPassword"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/eText_settings_password" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:labelFor="@id/eText_settings_passwordconfirm"
                    android:text="@string/passwordConfirm"
                    app:layout_constraintBottom_toBottomOf="@+id/eText_settings_passwordconfirm"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/eText_settings_passwordconfirm" />


                <Button
                    android:id="@+id/btn_settings_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/cancel"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="@+id/guideline"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox_settings_quickstart"
                    app:layout_constraintHorizontal_bias="0.25" />

                <Button
                    android:id="@+id/btn_settings_apply"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/apply"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox_settings_quickstart" />

                <android.support.constraint.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5"
                    tools:layout_editor_absoluteX="192dp"
                    tools:layout_editor_absoluteY="0dp" />

                <CheckBox
                    android:id="@+id/checkBox_settings_quickstart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/quickStart"
                    app:layout_constraintLeft_toLeftOf="@+id/eText_settings_passwordconfirm"
                    app:layout_constraintTop_toBottomOf="@+id/eText_settings_passwordconfirm" />

        </android.support.constraint.ConstraintLayout>

</ScrollView>